# JayGame

./: .diff_review.txt  .gitignore  CLAUDE.md  RALPH_LOOP_POLISH.md  SCREEN_AUDIT.md  settings.gradle.kts
.claude/: ralph-loop.local.md  settings.local.json
.claude/agents/: jaygame-analyst.md  jaygame-builder.md  jaygame-qa.md
.claude/skills/add-unit/: skill.md
.claude/skills/analyze-game/: skill.md
.claude/skills/jaygame-dev/: skill.md
.claude/skills/validate-game/: skill.md
.superpowers/brainstorm/363-1773103383/: .events  approach-selection.html  ui-style-direction.html
Microsoft/Windows/PowerShell/: ModuleAnalysisCache
_workspace/: analysis.md  changes.md  qa-report.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Renderer.cpp  TextureAsset.cpp  main.cpp
app/src/main/cpp/engine/: Ability.cpp  Ability.h  Achievement.cpp  Achievement.h  AuraEffect.h  BattleScene.cpp  BattleScene.h  Buff.cpp  Buff.h  CollectionScene.cpp  CollectionScene.h  CombinationTable.h  Components.h  Currency.h  DailyLogin.h  DeckEditScene.cpp  DeckEditScene.h  Enemy.cpp  Enemy.h  Entity.h  FloatingText.h  GameEngine.cpp  GameEngine.h  GradeColors.h  GraphicsContext.cpp  GraphicsContext.h  Grid.h  InputEvent.h  InputSystem.cpp  InputSystem.h  LobbyScene.cpp  LobbyScene.h  MathTypes.h  MergeSystem.cpp  MergeSystem.h  ObjectPool.h  ParticleSystem.cpp  ParticleSystem.h  PlayerData.h  Projectile.cpp  (+30 more)
docs/: DEVELOPMENT_PHASES.md  GDD.md  RandomDice_Analysis.md  mobile-td-uiux-analysis.md  privacy-policy.html
docs/plans/: 2026-03-09-battle-visual-redesign-design.md  2026-03-09-battle-visual-redesign.md  2026-03-09-stitch-ui-redesign-design.md  2026-03-09-stitch-ui-redesign.md  2026-03-09-ui-redesign-design.md  2026-03-09-ui-redesign.md
docs/superpowers/plans/: 2026-03-10-dark-neon-ui-redesign.md  2026-03-11-battle-visual-overhaul.md  (+8 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
tools/: build_atlas.py  generate_atlas.py
(+404 files in other folders)
